--- a/Torn_Assistant.csproj
+++ b/Torn_Assistant.csproj
@@ -50,8 +50,6 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
     <None Include="Properties\Settings.settings" />
   </ItemGroup>
   <ItemGroup>
@@ -61,6 +59,7 @@
     <Compile Include="API\Faction.cs" />
     <Compile Include="API\Gyms.cs" />
     <Compile Include="API\Items.cs" />
+    <Compile Include="API\Museum.cs" />
     <Compile Include="API\MyNetwork.cs" />
     <Compile Include="API\TornAPISection.cs" />
     <Compile Include="API\Travel.cs" />
@@ -82,6 +81,12 @@
     </Compile>
     <Compile Include="ItemDetailsForm.Designer.cs">
       <DependentUpon>ItemDetailsForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MuseumCollections.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MuseumCollections.Designer.cs">
+      <DependentUpon>MuseumCollections.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -105,6 +110,9 @@
       <DependentUpon>ItemDetailsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx" />
+    <EmbeddedResource Include="MuseumCollections.resx">
+      <DependentUpon>MuseumCollections.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TravelAgent.resx">
       <DependentUpon>TravelAgent.cs</DependentUpon>
     </EmbeddedResource>
